--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,44 +7,40 @@ import Card from '../components/Card.astro';
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 <Layout title="Ballistic - Home">
-	<nav class="navbar navbar-dark navbar-expand bg-dark fixed-top">
-  	<div class="container-fluid">
+	<nav class="navbar navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand text-gradient" href="#">
 			<img src="https://media.discordapp.net/attachments/985589240115122256/1004556306859970611/unknown.png" style="width:40px;height:40px;">
-    	<a class="navbar-brand text-gradient" href="#">Ballistic</a>
-    	<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+    	Ballistic
+		</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    	</button>
-    		<div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-      		<div class="offcanvas-header">
-        		<h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
-        		<button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      		</div>
-      		<div class="offcanvas-body">
-        		<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-          		<li class="nav-item">
-            		<a class="nav-link active" aria-current="page" href="#">Home</a>
-          		</li>
-          		<li class="nav-item">
-            		<a class="nav-link" href="#">About</a>
-          		</li>
-							<li class="nav-item">
-            		<a class="nav-link" href="#">Development</a>
-          		</li>
-							<li class="nav-item">
-            		<a class="nav-link" href="#">Pricing</a>
-          		</li>
-        		</ul>
-      		</div>
-    		</div>
-  		</div>
-		</nav>
-		<div class="div_main">
-			<center>
-				<h1 style="flex: 0 0 120px;">
-				Welcome to <p class="text-gradient">Ballistic</p></h1>
-			</center>
-		</div>
-		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212529" fill-opacity="1" d="M0,224L48,213.3C96,203,192,181,288,186.7C384,192,480,224,576,250.7C672,277,768,299,864,298.7C960,299,1056,277,1152,266.7C1248,256,1344,256,1392,256L1440,256L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+				<li class="nav-item">
+          <a class="nav-link" href="#">Developers</a>
+        </li>
+				<li class="nav-item">
+          <a class="nav-link" href="#">Purchase</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+	<div class="div_main">
+		<center>
+			<h1 style="flex: 0 0 120px;">
+			Welcome to <p class="text-gradient">Ballistic</p></h1>
+		</center>
+	</div>
+	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212529" fill-opacity="1" d="M0,224L48,213.3C96,203,192,181,288,186.7C384,192,480,224,576,250.7C672,277,768,299,864,298.7C960,299,1056,277,1152,266.7C1248,256,1344,256,1392,256L1440,256L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
 </Layout>
 
 <style>
