--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,115 +7,145 @@ import Card from '../components/Card.astro';
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 <Layout title="Ballistic - Home">
-	<nav class="navbar navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand text-gradient" href="#">
-			<img src="https://media.discordapp.net/attachments/985589240115122256/1004556306859970611/unknown.png" style="width:40px;height:40px;">
-    	Ballistic
-		</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-				<li class="nav-item">
-          <a class="nav-link" href="#">Developers</a>
-        </li>
-				<li class="nav-item">
-          <a class="nav-link" href="#">Purchase</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-	<div class="div_main" style="z-index: 2">
-		<center>
-			<h1 style="flex: 0 0 120px;">
-			Welcome to <p class="text-gradient">Ballistic</p></h1>
-	 <p class="opacity-50 text-bg-dark text-capitalize text-center">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ex harum 
-    </p>
-		<button class="btm-main"> Button
-			</button>
-		</center>
-	</div>
-	<svg style="z-index: 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212529" fill-opacity="1" d="M0,224L48,213.3C96,203,192,181,288,186.7C384,192,480,224,576,250.7C672,277,768,299,864,298.7C960,299,1056,277,1152,266.7C1248,256,1344,256,1392,256L1440,256L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
-</Layout>
+        <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand text-gradient" href="#">
+                <img src="https://media.discordapp.net/attachments/985589240115122256/1004556306859970611/unknown.png" style="width:40px;height:40px;">
+            Ballistic
+            </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+                    <li class="nav-item">
+              <a class="nav-link" href="#">Developers</a>
+            </li>
+                    <li class="nav-item">
+              <a class="nav-link" href="#">Purchase</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="header">
 
+        <!--Content before waves-->
+        <div >
+      <div class="div_main">
+            <center>
+                <h1 style="flex: 0 0 120px;">
+                Welcome to <p class="text-gradient">Ballistic</p></h1>
+         <p class="opacity-50 text-bg-dark text-capitalize text-center">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ex harum 
+        </p>
+            <button class="btm-main"> Button
+                </button>
+            </center>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212529" fill-opacity="1" d="M0,224L48,213.3C96,203,192,181,288,186.7C384,192,480,224,576,250.7C672,277,768,299,864,298.7C960,299,1056,277,1152,266.7C1248,256,1344,256,1392,256L1440,256L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+    </Layout>
+        </div>
+        
+        <!--Waves Container-->
+        <div>
+        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+        <defs>
+        <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+        </defs>
+        <g class="parallax">
+        <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+        <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+        <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+        <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+        </g>
+        </svg>
+        </div>
+        <!--Waves end-->
+        
+        </div>
+        <!--Header ends-->
+        
+        <!--Content starts-->
+       
+        <!--Content ends-->
+        
+    
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-	:root {
-		--astro-gradient: linear-gradient(0deg, #4f39fa, #da62c4);
-	}
+:root {
+  --astro-gradient: linear-gradient(0deg, #4f39fa, #da62c4);
+}
 
-	body {
-		font-family: 'Roboto', sans-serif;
-	}
+body {
+  font-family: 'Roboto', sans-serif;
+}
+    
+h1 {
+  margin: 2rem 0;
+}
+    
+.div_main {
+  color: #fff;
+  height: 280px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #212529;
+}
+    
+.text-gradient {
+  font-weight: 900;
+  background-image: var(--astro-gradient);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 100% 200%;
+  background-position-y: 100%;
+  border-radius: 0.4rem;
+  animation: pulse 4s ease-in-out infinite;
+}
+    
+@keyframes pulse {
+  0%,
+  100% {
+    background-position-y: 0%;
+  }
+  50% {
+    background-position-y: 80%;
+  }
+}
+    
+.instructions {
+  line-height: 1.6;
+  margin: 1rem 0;
+  background: #4f39fa;
+  padding: 1rem;
+  border-radius: 0.4rem;
+  color: var(--color-bg);
+}
+    
+.instructions code {
+  font-size: 0.875em;
+  order: 0.1em solid var(--color-border);
+  border-radius: 4px;
+  padding: 0.15em 0.25em;
+}
+    
+.link-card-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+  gap: 1rem;
+  padding: 0;
+}
 
-	h1 {
-		margin: 2rem 0;
-	}
-
-	.div_main {
-		color: #fff;
-  	height: 280px;
-  	display: flex;
-  	justify-content: center;
-  	align-items: center;
-		background-color: #212529;
-	}
-
-	.text-gradient {
-		font-weight: 900;
-		background-image: var(--astro-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 100% 200%;
-		background-position-y: 100%;
-		border-radius: 0.4rem;
-		animation: pulse 4s ease-in-out infinite;
-	}
-
-	@keyframes pulse {
-		0%,
-		100% {
-			background-position-y: 0%;
-		}
-		50% {
-			background-position-y: 80%;
-		}
-	}
-
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		background: #4f39fa;
-		padding: 1rem;
-		border-radius: 0.4rem;
-		color: var(--color-bg);
-	}
-
-	.instructions code {
-		font-size: 0.875em;
-		border: 0.1em solid var(--color-border);
-		border-radius: 4px;
-		padding: 0.15em 0.25em;
-	}
-
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-	.btm-main{
-
+.btm-main{
   padding: 1.3em 3em;
   font-size: 12px;
   text-transform: uppercase;
@@ -125,12 +155,12 @@ import Card from '../components/Card.astro';
   background-color: #fff;
   border: none;
   border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  Box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
 }
-
+    
 .btm-main:hover {
   background-color: #23c483;
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
@@ -140,5 +170,95 @@ import Card from '../components/Card.astro';
 
 .btm-main:active {
   transform: translateY(-1px);
+}
+
+.header {
+  position:relative;
+  text-align:center;
+  background: #212529;
+  color:white;
+}
+          
+.logo {
+  width:50px;
+  fill:white;
+  padding-right:15px;
+  display:inline-block;
+  vertical-align: middle;
+}
+          
+.inner-header {
+  height:65vh;
+  width:100%;
+  margin: 0;
+  padding: 0;
+}
+          
+.flex { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+          
+.waves {
+  position:relative;
+  width: 100%;
+  height:15vh;
+  margin-bottom:-7px; /*Fix for safari gap*/
+  min-height:100px;
+  max-height:150px;
+}
+          
+.content {
+  position:relative;
+  height:20vh;
+  text-align:center;
+  background-color: white;
+}
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+}
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
+}
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+}
+
+@keyframes move-forever {
+  0% {
+    transform: translate3d(-90px,0,0);
+  }
+  100% { 
+    transform: translate3d(85px,0,0);
+  }
+}
+          
+@media (max-width: 768px) {
+  .waves {
+    height:40px;
+    min-height:40px;
+  }
+  
+  .content {
+   height:30vh;
+  }
+  
+  h1 {
+    font-size:24px;
+  }
 }
 </style>
