--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,8 @@ import Card from '../components/Card.astro';
             <li></li>
             <li></li>
         </ul>
-    </divS>
+      </div>
+    </div>
 </Layout>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
