--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,13 @@ import Card from '../components/Card.astro';
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<audio controls autoplay>
+
+  <source src="" type="audio/mpeg">
+  
+  Your browser does not support the audio element.
+  
+</audio>
 
 <Layout title="Ballistic - Home">
         <nav class="navbar navbar-dark bg-dark">
@@ -62,6 +69,9 @@ import Card from '../components/Card.astro';
             <li></li>
         </ul>
       </div>
+    </div>
+    <div>
+
     </div>
 </Layout>
 <style>
@@ -266,7 +276,7 @@ h1 {
     background: #4e54c8;  
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
     width: 100%;
-    height:100vh;
+    height:200vh;
 }
 
 .circles{
