--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,6 @@ import Card from '../components/Card.astro';
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-<audio controls autoplay>
-
-  <source src="" type="audio/mpeg">
-  
-  Your browser does not support the audio element.
-  
-</audio>
 
 <Layout title="Ballistic - Home">
         <nav class="navbar navbar-dark bg-dark">
@@ -68,10 +61,39 @@ import Card from '../components/Card.astro';
             <li></li>
             <li></li>
         </ul>
+        <div>
+          <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                <div class="card" style="width: 18rem; background-color: #3c43c3;">
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+              </div>
+            <div class="col">
+              <div class="card" style="width: 18rem; background-color: #3c43c3; height: 100;">
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 18rem; background-color: #3c43c3;">
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <div>
-
     </div>
 </Layout>
 <style>
@@ -273,10 +295,16 @@ h1 {
 
 
 .area{
-    background: #4e54c8;  
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
-    width: 100%;
-    height:200vh;
+  background: #4e54c8;  
+  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
+  width: 100%;
+  height: 200vh;
+}
+
+.area-cards {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
 }
 
 .circles{
