--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -42,7 +42,7 @@ const { href, title, body } = Astro.props as Props;
 		padding: 1em 1.3em;
 		border-radius: 0.35rem;
 		color: var(--text-color);
-		background-color: white;
+		background-color: #000;
 		opacity: 0.8;
 	}
 
