--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,34 +62,47 @@ import Card from '../components/Card.astro';
             <li></li>
         </ul>
         <div>
+          <h1>Functions & Features!</h1>
           <div class="container text-center">
             <div class="row">
               <div class="col">
-                <div class="card" style="width: 18rem; background-color: #3c43c3;">
-  <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
+                <li class="link-card astro-6IXEBBIR">
+	<a href="#" class="astro-6IXEBBIR">
+		<h2 class="astro-6IXEBBIR">
+			Customizable
+			<span class="astro-6IXEBBIR">→</span>
+		</h2>
+		<p class="astro-6IXEBBIR">
+			Explore our themes and features for our Exploit! They could help you!
+		</p>
+	</a>
+</li>
               </div>
             <div class="col">
-              <div class="card" style="width: 18rem; background-color: #3c43c3; height: 100;">
-  <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
+              <li class="link-card astro-6IXEBBIR">
+	<a href="#" class="astro-6IXEBBIR">
+		<h2 class="astro-6IXEBBIR">
+			DLL
+			<span class="astro-6IXEBBIR">→</span>
+		</h2>
+		<p class="astro-6IXEBBIR">
+			Great Level 7 Execution & 60+ Functions in 1 whole DLL, Amazing!
+		</p>
+	</a>
+</li>
             </div>
             <div class="col">
-              <div class="card" style="width: 18rem; background-color: #3c43c3;">
-  <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
+              <li class="link-card astro-6IXEBBIR">
+	<a href="#" class="astro-6IXEBBIR">
+		<h2 class="astro-6IXEBBIR">
+			 Developers
+			<span class="astro-6IXEBBIR">→</span>
+		</h2>
+		<p class="astro-6IXEBBIR">
+			Our team works hard on this project so you can can develop and build your scripts!
+		</p>
+	</a>
+</li>
             </div>
           </div>
         </div>
