--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -27,6 +27,7 @@ const { href, title, body } = Astro.props as Props;
 	.link-card {
 		list-style: none;
 		display: flex;
+		height: 100%;
 		padding: 0.15rem;
 		background-image: var(--link-gradient);
 		background-size: 400%;
