--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,7 +69,63 @@ import Card from '../components/Card.astro';
                 <li class="link-card astro-6IXEBBIR">
 	<a href="#" class="astro-6IXEBBIR">
 		<h2 class="astro-6IXEBBIR">
-			Customizable
+			Bypass
+			<span class="astro-6IXEBBIR">→</span>
+		</h2>
+		<p class="astro-6IXEBBIR">
+			Bypassing Roblox's Anti-cheat with our Exploit so you can never be banned from Roblox!
+		</p>
+	</a>
+</li>
+              </div>
+            <div class="col">
+              <li class="link-card astro-6IXEBBIR">
+	<a href="#" class="astro-6IXEBBIR">
+		<h2 class="astro-6IXEBBIR">
+			Safe
+			<span class="astro-6IXEBBIR">→</span>
+		</h2>
+		<p class="astro-6IXEBBIR">
+			This is a totally safe Exploit with Developers around the globe trusting this Exploit!
+		</p>
+	</a>
+</li>
+            </div>
+            <div class="col">
+              <li class="link-card astro-6IXEBBIR">
+	<a href="#" class="astro-6IXEBBIR">
+		<h2 class="astro-6IXEBBIR">
+			 Full-Lua
+			<span class="astro-6IXEBBIR">→</span>
+		</h2>
+		<p class="astro-6IXEBBIR">
+			Execution is good but with a Full Lua Support, DLL Powered with support of your needs!
+		</p>
+	</a>
+</li>
+            </div>
+            <div class="col">
+              <li class="link-card astro-6IXEBBIR">
+	<a href="#" class="astro-6IXEBBIR">
+		<h2 class="astro-6IXEBBIR">
+			 Docs / API
+			<span class="astro-6IXEBBIR">→</span>
+		</h2>
+		<p class="astro-6IXEBBIR">
+			Our team will make the documentation fully descriptive and good, Supporting over 60+ Functions!
+		</p>
+	</a>
+</li>
+          </div>
+        </div>
+      </div>
+      <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                <li class="link-card astro-6IXEBBIR" style="--rot-x:0deg; --rot-y:0deg;">
+	<a href="#" class="astro-6IXEBBIR">
+		<h2 class="astro-6IXEBBIR">
+			Customize
 			<span class="astro-6IXEBBIR">→</span>
 		</h2>
 		<p class="astro-6IXEBBIR">
@@ -82,11 +138,24 @@ import Card from '../components/Card.astro';
               <li class="link-card astro-6IXEBBIR">
 	<a href="#" class="astro-6IXEBBIR">
 		<h2 class="astro-6IXEBBIR">
-			DLL
+			UI
 			<span class="astro-6IXEBBIR">→</span>
 		</h2>
 		<p class="astro-6IXEBBIR">
-			Great Level 7 Execution & 60+ Functions in 1 whole DLL, Amazing!
+			A great UI with Powerful Functions / Features included makes it one of the top!
+		</p>
+	</a>
+</li>
+            </div>
+            <div class="col">
+              <li class="link-card astro-6IXEBBIR">
+	<a href="#" class="astro-6IXEBBIR">
+		<h2 class="astro-6IXEBBIR">
+			 Execution
+			<span class="astro-6IXEBBIR">→</span>
+		</h2>
+		<p class="astro-6IXEBBIR">
+			Execution on this exploit is amazing with 60+ Functions and a load of extra Ballistic-Only functions!
 		</p>
 	</a>
 </li>
@@ -103,10 +172,7 @@ import Card from '../components/Card.astro';
 		</p>
 	</a>
 </li>
-            </div>
           </div>
-        </div>
-      </div>
     </div>
 </Layout>
 <style>
