--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Card from '../components/Card.astro';
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 <Layout title="Ballistic - Home">
+<iframe src="SONG.mp3" type="audio/mp3" allow="autoplay" id="audio" style=”display:none”></iframe>
         <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand text-gradient" href="#">
@@ -63,7 +64,7 @@ import Card from '../components/Card.astro';
         </ul>
         <div>
           <h1>Functions & Features!</h1>
-          <div class="container text-center">
+          <div class="container">
             <div class="row">
               <div class="col">
                 <li class="link-card astro-6IXEBBIR">
@@ -105,7 +106,7 @@ import Card from '../components/Card.astro';
 </li>
             </div>
             <div class="col">
-              <li class="link-card astro-6IXEBBIR">
+              <li class="link-card astro-6IXEBBIR bg-transparent">
 	<a href="#" class="astro-6IXEBBIR">
 		<h2 class="astro-6IXEBBIR">
 			 Docs / API
