--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,14 +6,12 @@ import Card from '../components/Card.astro';
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
-<Layout title="Ballistic - Home">
-
-<iframe src="https://www.mboxdrive.com/SONG.mp3" type="audio/mp3" allow="autoplay" id="audio" class="iframe_music"></iframe>
+<Layout title="Atonix - Home">
         <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand text-gradient" href="#">
                 <img src="https://media.discordapp.net/attachments/985589240115122256/1004556306859970611/unknown.png" style="width:40px;height:40px;">
-            Ballistic
+            ATONIX
             </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -41,9 +39,9 @@ import Card from '../components/Card.astro';
         <div class="div_main">
             <center>
                 <h1 style="flex: 0 0 120px;">
-                Welcome to <p class="text-gradient">Ballistic</p></h1>
+                Welcome to <p class="text-gradient">Atonix</p></h1>
          <p class="opacity-50 text-bg-dark text-capitalize text-center">
-            A powerful UI with a powerful DLL!
+            A exploit for everyone and anyone!
         </p>
         <button class="btm-main"> Read More
             </button>
@@ -64,117 +62,9 @@ import Card from '../components/Card.astro';
             <li></li>
         </ul>
         <div>
-          <h1>Functions & Features!</h1>
-          <div class="container">
-            <div class="row">
-              <div class="col">
-                <li class="link-card astro-6IXEBBIR">
-	<a href="#" class="astro-6IXEBBIR">
-		<h2 class="astro-6IXEBBIR">
-			Bypass
-			<span class="astro-6IXEBBIR">→</span>
-		</h2>
-		<p class="astro-6IXEBBIR">
-			Bypassing Roblox's Anti-cheat with our Exploit so you can never be banned from Roblox!
-		</p>
-	</a>
-</li>
-              </div>
-            <div class="col">
-              <li class="link-card astro-6IXEBBIR">
-	<a href="#" class="astro-6IXEBBIR">
-		<h2 class="astro-6IXEBBIR">
-			Safe
-			<span class="astro-6IXEBBIR">→</span>
-		</h2>
-		<p class="astro-6IXEBBIR">
-			This is a totally safe Exploit with Developers around the globe trusting this Exploit!
-		</p>
-	</a>
-</li>
-            </div>
-            <div class="col">
-              <li class="link-card astro-6IXEBBIR">
-	<a href="#" class="astro-6IXEBBIR">
-		<h2 class="astro-6IXEBBIR">
-			 Full-Lua
-			<span class="astro-6IXEBBIR">→</span>
-		</h2>
-		<p class="astro-6IXEBBIR">
-			Execution is good but with a Full Lua Support, DLL Powered with support of your needs!
-		</p>
-	</a>
-</li>
-            </div>
-            <div class="col">
-              <li class="link-card astro-6IXEBBIR bg-transparent">
-	<a href="#" class="astro-6IXEBBIR">
-		<h2 class="astro-6IXEBBIR">
-			 Docs / API
-			<span class="astro-6IXEBBIR">→</span>
-		</h2>
-		<p class="astro-6IXEBBIR">
-			Our team will make the documentation fully descriptive and good, Supporting over 60+ Functions!
-		</p>
-	</a>
-</li>
-          </div>
+          <h1>What is Atonix?</h1>
+          <span>Atonix is a great and free to use executor releasing its second version soon:tm:! </span>
         </div>
-      </div>
-      <div class="container text-center">
-            <div class="row">
-              <div class="col">
-                <li class="link-card astro-6IXEBBIR" style="--rot-x:0deg; --rot-y:0deg;">
-	<a href="#" class="astro-6IXEBBIR">
-		<h2 class="astro-6IXEBBIR">
-			Customize
-			<span class="astro-6IXEBBIR">→</span>
-		</h2>
-		<p class="astro-6IXEBBIR">
-			Explore our themes and features for our Exploit! They could help you!
-		</p>
-	</a>
-</li>
-              </div>
-            <div class="col">
-              <li class="link-card astro-6IXEBBIR">
-	<a href="#" class="astro-6IXEBBIR">
-		<h2 class="astro-6IXEBBIR">
-			UI
-			<span class="astro-6IXEBBIR">→</span>
-		</h2>
-		<p class="astro-6IXEBBIR">
-			A great UI with Powerful Functions / Features included makes it one of the top!
-		</p>
-	</a>
-</li>
-            </div>
-            <div class="col">
-              <li class="link-card astro-6IXEBBIR">
-	<a href="#" class="astro-6IXEBBIR">
-		<h2 class="astro-6IXEBBIR">
-			 Execution
-			<span class="astro-6IXEBBIR">→</span>
-		</h2>
-		<p class="astro-6IXEBBIR">
-			Execution on this exploit is amazing with 60+ Functions and a load of extra Ballistic-Only functions!
-		</p>
-	</a>
-</li>
-            </div>
-            <div class="col">
-              <li class="link-card astro-6IXEBBIR">
-	<a href="#" class="astro-6IXEBBIR">
-		<h2 class="astro-6IXEBBIR">
-			 Developers
-			<span class="astro-6IXEBBIR">→</span>
-		</h2>
-		<p class="astro-6IXEBBIR">
-			Our team works hard on this project so you can can develop and build your scripts!
-		</p>
-	</a>
-</li>
-          </div>
     </div>
 </Layout>
 <style>
