--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,9 +63,68 @@ import Card from '../components/Card.astro';
         </ul>
         <div>
           <h1>What is Atonix?</h1>
-          <span>Atonix is a great and free to use executor releasing its second version soon:tm:! </span>
+          <span>Atonix is a great and free to use executor releasing its second version soon™, It's a powerful and Light-weight exploit with Multiple API's used for Execution and semi-good Settings Functions!</span>
         </div>
+        <div>
+          <h1>Functions & Features!</h1>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <li class="link-card astro-6IXEBBIR">
+	      <a href="#" class="astro-6IXEBBIR">
+		      <h2 class="astro-6IXEBBIR">
+		    	  Bypass
+			      <span class="astro-6IXEBBIR">→</span>
+		      </h2>
+		      <p class="astro-6IXEBBIR">
+			      Bypassing Roblox's Anti-cheat with our Exploit so you can never be banned from Roblox!
+		      </p>
+	      </a>
+      </li>
     </div>
+    <div class="col">
+      <li class="link-card astro-6IXEBBIR">
+	      <a href="#" class="astro-6IXEBBIR">
+		      <h2 class="astro-6IXEBBIR">
+			      Safe
+			    <span class="astro-6IXEBBIR">→</span>
+		    </h2>
+		    <p class="astro-6IXEBBIR">
+			    This is a totally safe Exploit with Developers around the globe trusting this Exploit!
+		    </p>
+	    </a>
+    </li>
+    </div>
+    <div class="col">
+      <li class="link-card astro-6IXEBBIR">
+	      <a href="#" class="astro-6IXEBBIR">
+		      <h2 class="astro-6IXEBBIR">
+			      Full-Lua
+			      <span class="astro-6IXEBBIR">→</span>
+		      </h2>
+		        <p class="astro-6IXEBBIR">
+			        Execution is good but with a Full Lua Support, DLL Powered with support of your needs!
+		        </p>
+	        </a>
+        </li>
+          </div>
+            <div class="col">
+              <li class="link-card astro-6IXEBBIR bg-transparent">
+	            <a href="#" class="astro-6IXEBBIR">
+		            <h2 class="astro-6IXEBBIR">
+			            Docs / API
+			            <span class="astro-6IXEBBIR">→</span>
+		            </h2>
+		            <p class="astro-6IXEBBIR">
+			            Our team will make the documentation fully descriptive and good, Supporting over 60+ Functions!
+		            </p>
+	            </a>
+            </li>   
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </Layout>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
